fix: fixing alignment and width of cards from carousel

--- a/assets/css/carousel/carousel.css
+++ b/assets/css/carousel/carousel.css
@@ -14,10 +14,12 @@ input{
 .cards{
     position: relative;
     height: 500px;
-    width: 90vw;
+    width: 50vw;
     margin-bottom: 20px;
     perspective: 1000px;
     transform-style: preserve-3d;
+    display: flex;
+    justify-content: center;
 }
 
 .cards label{
